<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:layout_marginTop="100sp"
        android:textColor="@color/black"
        >
    </TextView>
    <Button
        android:layout_marginTop="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/play">

    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/guide">

    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/about">

    </Button>


</LinearLayout>
